# pulsar-demo

./: .gitignore  README.md
.github/workflows/: consumer.yml  producer.yml
consumer/: build.sbt  shell.nix
consumer/project/: Dependencies.scala
consumer/src/main/scala/pulsar/consumer/: Main.scala
producer/: Main.hs  default.nix  pkgs.nix  pulsar-producer.cabal  shell.nix
