cabal-version:       3.0

name:                pulsar-producer
version:             0.1.0.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          gabriel.volpe@chatroulette.com
build-type:          Simple
extra-source-files:  README.md

custom-setup
  setup-depends:       base
                     , Cabal
                     , proto-lens-setup

executable pulsar-producer
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , supernova
                     , text
  default-language:    Haskell2010
